<resources>
    <string name="app_name" translatable="false">CALCULATOR</string>
    <string name="string_c" translatable="false">C</string>
    <string name="string_ac" translatable="false">AC</string>
    <string name="string_error">Error</string>
    <string name="string_zero" translatable="false">0</string>
    <string name="string_minus_zero" translatable="false">-0</string>
    <string name="string_one" translatable="false">1</string>
    <string name="string_two" translatable="false">2</string>
    <string name="string_three" translatable="false">3</string>
    <string name="string_four" translatable="false">4</string>
    <string name="string_five" translatable="false">5</string>
    <string name="string_six" translatable="false">6</string>
    <string name="string_seven" translatable="false">7</string>
    <string name="string_eight" translatable="false">8</string>
    <string name="string_nine" translatable="false">9</string>
    <string name="string_equal" translatable="false">=</string>
    <string name="string_plus" translatable="false">+</string>
    <string name="string_minus" translatable="false">-</string>
    <string name="string_multiply" translatable="false">*</string>
    <string name="string_divide" translatable="false">/</string>
    <string name="string_percent" translatable="false">%</string>
    <string name="string_sign" translatable="false">+-</string>
    <string name="string_comma" translatable="false">,</string>
    <string name="string_point" translatable="false">.</string>
</resources>