<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textResult"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:gravity="bottom|end"
        android:fontFamily="@font/comfortaa_light"
        android:text="@string/string_zero"
        android:textColor="@color/white"
        android:textSize="75sp"
        app:layout_constraintBottom_toTopOf="@id/buttonsField"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.067" />

    <LinearLayout
        android:id="@+id/buttonsField"
        android:layout_width="match_parent"
        android:layout_height="511dp"
        android:layout_marginBottom="10dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textResult">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:baselineAligned="true"
            android:orientation="horizontal">

            <FrameLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical"
                tools:ignore="NestedWeights">

                <Button
                    android:id="@+id/deleteButton"
                    style="@style/lightGrayButton"
                    android:text="@string/string_ac" />
            </FrameLayout>

            <FrameLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical">

                <Button
                    android:id="@+id/signButton"
                    style="@style/lightGrayButton"
                    app:icon="@drawable/signs" />
            </FrameLayout>

            <FrameLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical">

                <Button
                    android:id="@+id/percentButton"
                    style="@style/lightGrayButton"
                    app:icon="@drawable/percent" />
            </FrameLayout>

            <FrameLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical">

                <Button
                    android:id="@+id/divisionButton"
                    style="@style/orangeButton"
                    android:text="@string/string_divide"
                    app:icon="@drawable/divide" />

                <Button
                    android:id="@+id/whiteDivisionButton"
                    style="@style/whiteButton"
                    android:text="@string/string_divide"
                    android:visibility="invisible"
                    app:icon="@drawable/divide" />
            </FrameLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:baselineAligned="true"
            android:orientation="horizontal">

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                tools:ignore="NestedWeights">

                <Button
                    android:id="@+id/sevenButton"
                    style="@style/darkGrayButton"
                    android:fontFamily="@font/comfortaa"
                    android:text="@string/string_seven" />
            </FrameLayout>

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1">

                <Button
                    android:id="@+id/eightButton"
                    style="@style/darkGrayButton"
                    android:fontFamily="@font/comfortaa"
                    android:text="@string/string_eight" />
            </FrameLayout>

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1">

                <Button
                    android:id="@+id/nineButton"
                    style="@style/darkGrayButton"
                    android:fontFamily="@font/comfortaa"
                    android:text="@string/string_nine" />
            </FrameLayout>

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1">

                <Button
                    android:id="@+id/multiplyButton"
                    style="@style/orangeButton"
                    android:text="@string/string_multiply"
                    app:icon="@drawable/multiply" />

                <Button
                    android:id="@+id/whiteMultiplyButton"
                    style="@style/whiteButton"
                    android:text="@string/string_multiply"
                    android:visibility="invisible"
                    app:icon="@drawable/multiply" />
            </FrameLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:baselineAligned="true"
            android:orientation="horizontal">

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                tools:ignore="NestedWeights">

                <Button
                    android:id="@+id/fourButton"
                    style="@style/darkGrayButton"
                    android:fontFamily="@font/comfortaa"
                    android:text="@string/string_four" />
            </FrameLayout>

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1">

                <Button
                    android:id="@+id/fiveButton"
                    style="@style/darkGrayButton"
                    android:fontFamily="@font/comfortaa"
                    android:text="@string/string_five" />
            </FrameLayout>

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1">

                <Button
                    android:id="@+id/sixButton"
                    style="@style/darkGrayButton"
                    android:fontFamily="@font/comfortaa"
                    android:text="@string/string_six" />
            </FrameLayout>

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1">

                <Button
                    android:id="@+id/subtractionButton"
                    style="@style/orangeButton"
                    android:text="@string/string_minus"
                    app:icon="@drawable/minus" />

                <Button
                    android:id="@+id/whiteSubtractionButton"
                    style="@style/whiteButton"
                    android:text="@string/string_minus"
                    android:visibility="invisible"
                    app:icon="@drawable/minus" />
            </FrameLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:baselineAligned="true"
            android:orientation="horizontal">

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                tools:ignore="NestedWeights">

                <Button
                    android:id="@+id/oneButton"
                    style="@style/darkGrayButton"
                    android:fontFamily="@font/comfortaa"
                    android:text="@string/string_one" />
            </FrameLayout>

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1">

                <Button
                    android:id="@+id/twoButton"
                    style="@style/darkGrayButton"
                    android:fontFamily="@font/comfortaa"
                    android:text="@string/string_two" />
            </FrameLayout>

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1">

                <Button
                    android:id="@+id/threeButton"
                    style="@style/darkGrayButton"
                    android:fontFamily="@font/comfortaa"
                    android:text="@string/string_three" />
            </FrameLayout>

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1">

                <Button
                    android:id="@+id/additionButton"
                    style="@style/orangeButton"
                    android:text="@string/string_plus"
                    app:icon="@drawable/plus" />

                <Button
                    android:id="@+id/whiteAdditionButton"
                    style="@style/whiteButton"
                    android:text="@string/string_plus"
                    android:visibility="invisible"
                    app:icon="@drawable/plus" />
            </FrameLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:baselineAligned="true"
            android:orientation="horizontal">

            <FrameLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="2"
                tools:ignore="NestedWeights">

                <Button
                    android:id="@+id/zeroButton"
                    style="@style/bigZeroButton"
                    android:fontFamily="@font/comfortaa"
                    android:text="@string/string_zero" />
            </FrameLayout>

            <FrameLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1">

                <Button
                    android:id="@+id/floatButton"
                    style="@style/darkGrayButton"
                    android:text="@string/string_comma" />
            </FrameLayout>

            <FrameLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1">

                <Button
                    android:id="@+id/equalsButton"
                    style="@style/orangeButton"
                    android:text="@string/string_equal"
                    app:icon="@drawable/equal" />
            </FrameLayout>
        </LinearLayout>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>